# Computational-Methods-2024

./: .gitignore  README.md
lab1MOWNIT/: main.cpp
lab2MOWNIT/: lab2_mownit_zielinski.ipynb  main.ipynb
lab3MOWNIT/: lab3.ipynb  main.ipynb
lab4MOWNIT/: TSP.ipynb
lab4MOWNIT/task2/Binary-images/: CMakeLists.txt  main.cpp
lab4MOWNIT/task2/Binary-images/algorithm/: find_minimum_energy.cpp  find_minimum_energy.h
lab4MOWNIT/task2/Binary-images/energyTypes/: energyfunctions.cpp  energyfunctions.h  neighbourhood_types.h
lab4MOWNIT/task2/Binary-images/utilities/: gif_creation.cpp  gif_creation.h  globals.h  plot_drawing.cpp  plot_drawing.h
lab4MOWNIT/task2/binary_images_report/: report.tex
lab4MOWNIT/task3/: sudokus.ipynb
lab5MOWNIT/: task1.ipynb  task2.ipynb
lab6MOWNIT/: search.py
lab6MOWNIT/data/: paths.py  queries.txt  url_to_filename copy 2.csv  url_to_filename.csv
lab6MOWNIT/data/engine_data/: filenames.csv  idf.csv  search_matrix.npz  us_matrix.npy  v_t_matrix.npy  vocabulary.csv
lab6MOWNIT/data/saved_texts/:  Pythagorean Theorem .txt  'Oppenheimer' sheds new light on the legacies of the Manhattan Project_ Nuclear legacy, public health hazards, and governmental secrecy - The Economic Times.txt  1. Introduction — Logic and Proof 3.18.4 documentation.txt  (+895 more)
lab6MOWNIT/initialization_engine/: analyze_text_helper_functions.py  download_data.py  init_engine.py
lab7MOWNIT/: power_method.ipynb  reversed_power_method.ipynb
lab9MOWNIT/: task2.ipynb
lab9MOWNIT/resources/: character_order  character_order_alternative
mownit-lab1/: CMakeLists.txt
(+6 files in other folders)
